--- a/samples/spring-sample/build.gradle
+++ b/samples/spring-sample/build.gradle
@@ -15,9 +15,19 @@ configurations {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    compileOnly 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
+    implementation 'com.alibaba:fastjson:1.2.6'
+
+    testImplementation 'org.slf4j:slf4j-api:1.7.25'
+    testImplementation 'ch.qos.logback:logback-classic:1.2.3'
+    testImplementation 'org.projectlombok:lombok:1.18.20'
+    testImplementation 'ch.qos.logback:logback-classic:1.2.11'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.projectlombok:lombok:1.18.20'
+
 }
 
 tasks.named('test') {
