--- a/samples/sample-spring/build.gradle
+++ b/samples/sample-spring/build.gradle
@@ -17,8 +17,18 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    compileOnly 'org.projectlombok:lombok:1.18.24'
-    annotationProcessor 'org.projectlombok:lombok:1.18.24'
+
+    compileOnly 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
+    implementation 'com.alibaba:fastjson:1.2.6'
+
+    testImplementation 'org.slf4j:slf4j-api:1.7.25'
+    testImplementation 'ch.qos.logback:logback-classic:1.2.3'
+    testImplementation 'org.projectlombok:lombok:1.18.20'
+    testImplementation 'ch.qos.logback:logback-classic:1.2.11'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.projectlombok:lombok:1.18.20'
+
 }
 
 tasks.named('test') {
