--- a/core/build.gradle
+++ b/core/build.gradle
@@ -12,11 +12,12 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
     implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'com.github.kevinsawicki:http-request:6.0'
+    implementation 'io.projectreactor:reactor-core:3.4.19'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
     testImplementation 'org.projectlombok:lombok:1.18.20'
-    testImplementation 'org.springframework.boot:spring-boot-starter-web'
-    testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
 }
 
 test {
