--- a/samples/sample-api/build.gradle
+++ b/samples/sample-api/build.gradle
@@ -17,7 +17,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    compileOnly 'org.projectlombok:lombok:1.18.24'
+    compileOnly 'org.projectlombok:lombok:1.18.2®4'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
 }
 
